--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,22 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/swagger-ui-react": "^3.35.2",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.25.0",
+    "formik": "^2.2.9",
+    "pino": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "swagger-ui-react": "^3.52.5",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
