--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-notifications-component": "^3.1.1",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/swagger-ui-react": "^3.35.2",
     "axios": "^0.24.0",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
