--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:8087",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,11 +18,11 @@
     "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
     "date-fns": "^2.26.0",
-    "formik": "^2.2.9",
     "pino": "^7.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.21.0",
     "react-notifications-component": "^3.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
