Adapt heroku startups to run "tsc" first. TODO: need to build client app also.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "develop:dev": "concurrently \"npm:server:build:watch\" \"npm:start:dev\"",
     "develop:prod": "concurrently \"npm:server:build:watch\" \"npm:start:prod\"",
+    "heroku:local": "cross-env heroku local web",
+    "heroku:start": "node dist/server.js",
+    "preheroku:local": "tsc",
+    "preheroku:start": "tsc",
     "run": "cross-env NODE_ENV=production node dist/server.js",
     "run:dev": "cross-env NODE_ENV=development node dist/server.js",
     "run:prod": "cross-env NODE_ENV=production node dist/server.js",
