--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "heroku:local": "cross-env heroku local web",
     "heroku:start": "node dist/server.js",
     "preheroku:local": "tsc",
-    "preheroku:start": "tsc",
+    "preheroku:start": "node_modules/.bin/tsc",
     "run": "cross-env NODE_ENV=production node dist/server.js",
     "run:dev": "cross-env NODE_ENV=development node dist/server.js",
     "run:prod": "cross-env NODE_ENV=production node dist/server.js",
