--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "pino": "^7.6.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
     "react-notifications-component": "^3.1.0",
