--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.10",
-    "@types/react-notifications-component": "^3.1.0",
     "@types/react-router-bootstrap": "^0.24.5",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
@@ -23,10 +22,10 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.2",
-    "react-notifications-component": "^3.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^8.2.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
