--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityteam/stats",
-  "version": "1.0.0",
+  "version": "2.0.0-20220310",
   "description": "Daily statistics collection for CityTeam Facilities",
   "main": "dist/server.js",
   "engines": {
