--- a/.github/workflows/UbuntuClientSmokeTest.yml
+++ b/.github/workflows/UbuntuClientSmokeTest.yml
@@ -1,10 +1,12 @@
 name: Ubuntu Client Smoke Test
 
 on:
-  push:
+  workflow_dispatch:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
 
 jobs:
   UbuntuClientSmokeTest:
