--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,17 @@
   "version": "0.1.0",
   "proxy": "http://localhost:8082",
   "private": true,
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
+  },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
