--- a/.github/workflows/UbuntuClientSmokeTest.yml
+++ b/.github/workflows/UbuntuClientSmokeTest.yml
@@ -1,12 +1,12 @@
 name: Ubuntu Client Smoke Test
 
 on:
-  workflow_dispatch:
+#  workflow_dispatch:
+#    branches: [ main ]
+  push:
     branches: [ main ]
-#  push:
-#    branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   UbuntuClientSmokeTest:
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 18.x ]
+        node-version: [ 16.x ]
 
     steps:
       - uses: actions/checkout@v2
