--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@craigmcc/oauth-orchestrator": "^1.0.1",
     "@craigmcc/openapi-builders": "^2.0.0",
+    "@craigmcc/shared-utils": "^1.0.2",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
