--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@craigmcc/oauth-orchestrator": "^1.0.1",
     "@craigmcc/openapi-builders": "^2.0.0",
     "@craigmcc/shared-utils": "^1.0.2",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
