--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.4",
     "@types/react-router-bootstrap": "^0.24.5",
     "axios": "^0.27.2",
@@ -19,6 +20,7 @@
     "echarts": "^5.3.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
