--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:8082",
   "private": true,
   "dependencies": {
+    "@craigmcc/shared-react": "^2.0.1",
     "@hookform/resolvers": "^2.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -23,7 +24,7 @@
     "react-csv": "^2.2.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.31.1",
+    "react-hook-form": "^7.34.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
