--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "echarts": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-csv": "^2.2.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
