--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "testall": "CI=true react-scripts test",
     "eject": "react-scripts eject"
